JumpScript/tests/baselines/reference/asyncArrowFunction8_es5.errors.txt
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction8_es5.jump(2,19): error TS1109: Expression expected.


==== tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction8_es5.jump (1 errors) ====
    var foo = async (): Promise<void> => {
      var v = { [await]: foo }
                      ~
!!! error TS1109: Expression expected.
    }